regen swag docs
