# internal/api/handlers/board.go
@@ -28,7 +28,7 @@ func NewBoardHandler(boardService services.BoardServicer) *BoardHandler {
 //	@Accept			json
 //	@Produce		json
 //	@Param			id path string true "Officer UUID"
-//	@Success		200 {object} dbmodels.Officer "Officer details"
+//	@Success		200 {object} dto.Officer "Officer details"
 //	@Failure		404 {object} map[string]string
 //	@Failure		500 {object} map[string]string
 //	@Router			/v1/board/officers/{id} [get]
@@ -62,7 +62,7 @@ func (h *BoardHandler) GetOfficer(c *gin.Context) {
 //	@Tags			Board
 //	@Accept			json
 //	@Produce		json
-//	@Success		200 {array} dbmodels.Officer "List of officers"
+//	@Success		200 {array} dto.Officer "List of officers"
 //	@Failure		500 {object} map[string]string
 //	@Router			/v1/board/officers [get]
 func (h *BoardHandler) GetOfficers(c *gin.Context) {
@@ -90,7 +90,7 @@ func (h *BoardHandler) GetOfficers(c *gin.Context) {
 //	@Tags			Board
 //	@Accept			json
 //	@Produce		json
-//	@Param			body body dbmodels.CreateOfficerParams true "Officer data"
+//	@Param			body body dto.Officer true "Officer data"
 //	@Success		200 {object} map[string]interface{} "Success message with UUID"
 //	@Failure		400 {object} map[string]string
 //	@Failure		500 {object} map[string]string
@@ -127,7 +127,7 @@ func (h *BoardHandler) CreateOfficer(c *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Param			id path string true "Officer UUID"
-//	@Param			body body dbmodels.UpdateOfficerParams true "Updated officer data"
+//	@Param			body body dto.UpdateOfficer true "Updated officer data"
 //	@Success		200 {object} map[string]string "Success message"
 //	@Failure		400 {object} map[string]string
 //	@Failure		404 {object} map[string]string
